--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,8 +193,8 @@ h6 {
 ------------------------------*/
 .php-email-form .error-message {
   display: none;
-  background: #171810;
-  color: #171810;
+  background: #1d1f21;
+  color: #1d1f21;
   text-align: left;
   padding: 15px;
   margin-bottom: 24px;
